src/components/JobCard/JobCard.sass
@import '@/mixins/typography.sass' 
  
.JobCard
  text-align: left
  color: var(--foreground)
  position: relative
  .card
    min-height: 64px
    box-sizing: border-box
    .title
      @include typography("small")
      transition: all .3s
      line-height: 28px
      padding-right: 48px
      &.expanded
        @include typography("head")
        padding-right: 32px
        margin-bottom: 8px
    .tip
      @include typography("small")
      position: absolute
      color: var(--primary)
      right: 8px
      top: 0
      height: 64px
      width: 64px
      text-align: center
      line-height: 64px
      transition: all .3s
      border-radius: 32px
      &.expanded
        @include typography("sub")
        background-color: var(--primary)
        line-height: 64px
        color: var(--background)
        margin-bottom: 16px
        transform: translate(16px, -8px) rotate(var(--rotationAmount))
    .content
      .expanded
        .owner
          display: flex
          align-items: center
          margin-bottom: 8px
          .profilePic
            height: 32ps
            width: 32px
            border-radius: 16px
            margin-right: 8px
          .name
            @include typography("normal")
        .location
          @include typography("small")
          margin-bottom: 8px
        .distance
          @include typography("small")
          margin-bottom: 8px
        .description
          @include typography("normal")
          color: var(--level4)
        .personNote
          @include typography("small")
          display: flex
          align-items: center
          color: var(--secondary)
          .avatar
            margin-right: 8px
            height: 32px
            width: 32px
            border-radius: 16px
            background: grey
        .actions
          margin-top: 16px
          .actionButton
            width: 100%
            margin-bottom: 16px
            &:last-child
              margin-bottom: 0
        .metadata
          @include typography('tiny')
          color: var(--level4)
.fade-enter-active, .fade-leave-active
  transition: all .2s ease
.fade-enter, .fade-leave-to
  opacity: 0

